--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -4,7 +4,7 @@
 
 <div class="container is_warning ">
     <div class="column is-two-fifths is-offset-one-quarter"> <h1 class="title is-2 has-text-centered">Pet Information</h1></div>
-      <form action="{{url_for('user_home', id=id)}}" method="POST">
+      <form action="{{url_for('pets.user_home', id=id)}}" method="POST">
         {{form.hidden_tag()}}
 
             <div class="column is-two-fifths is-offset-one-quarter has-text-white">{{form.animal_type.label.text}}: {{form.animal_type(class="input is-rounded is-primary")}}</div>
