--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -26,7 +26,7 @@
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
 
-      <a href="https://github.com/humblelite/virtual-pet-log" class="navbar-item">
+      <a href="https://github.com/humblelite/pet-log" class="navbar-item">
         Documentation
       </a>
       <a href="{{url_for('about')}}" class="navbar-item">
