--- a/project/templates/pets/edit.html
+++ b/project/templates/pets/edit.html
@@ -10,10 +10,10 @@
             <div class="column is-two-fifths is-offset-one-quarter has-text-white">{{form.animal_type.label.text}}: {{form.animal_type(class="input is-rounded is-primary")}}</div>
           {% if form.animal_type.errors %}<div class="column is-two-fifths is-offset-one-quarter has-text-danger">{%for error in form.animal_type.errors %}<h3>{{error}}</h3>{% endfor %}</div>{% endif %}
 
-           <div class="column is-two-fifths is-offset-one-quarter has-text-white">{{form.pet_name.label.text}}: {{form.pet_name( class="input is-rounded is-primary ", placeholder="Enter Pet Name")}}</div>
+           <div class="column is-two-fifths is-offset-one-quarter has-text-white">{{form.pet_name.label.text}}: {{form.pet_name( class="input is-rounded is-primary ", value=pet_query.pet_name)}}</div>
           {% if form.pet_name.errors %}<div class="column is-two-fifths is-offset-one-quarter has-text-danger">{%for error in form.pet_name.errors %}<h3>{{error}}</h3>{% endfor %}</div>{% endif %}
 
-          <div class="column is-two-fifths is-offset-one-quarter has-text-white"> {{form.pet_desc.label.text}}:  {{form.pet_desc(class="textarea is-rounded is-primary",  placeholder="Enter Pet Description")}}</div>
+          <div class="column is-two-fifths is-offset-one-quarter has-text-white"> {{form.pet_desc.label.text}}:  {{form.pet_desc(class="textarea is-rounded is-primary",  value=pet_query.pet_description)}}</div>
           {% if form.pet_desc.errors %}<div class="column is-two-fifths is-offset-one-quarter has-text-danger">{%for error in form.pet_desc.errors %}<h3>{{error}}</h3>{% endfor %}</div>{% endif %}
 
           <div class="column is-two-fifths is-offset-one-quarter">{{form.submit(class="button is-primary is-medium is-fullwidth is-inverted is-rounded")}}</div>
